syntax = "proto3";

package ride;

option go_package = "ride-service/pkg/pb";

service RideService {
  rpc CreateRide(CreateRideRequest) returns (CreateRideResponse);
  rpc GetPendingRides(GetPendingRidesRequest) returns (GetPendingRidesResponse);
  rpc UpdateRideStatus(UpdateRideStatusRequest) returns (UpdateRideStatusResponse);
}

message CreateRideRequest {
  string pickup_location = 1;
  string dropoff_location = 2;
}

message CreateRideResponse {
  int64 ride_id = 1;
  string status = 2;
}

message GetPendingRidesRequest {}

message GetPendingRidesResponse {
  repeated Ride rides = 1;
}

message Ride {
  int64 ride_id = 1;
  int64 user_id = 2;
  string pickup_location = 3;
  string dropoff_location = 4;
  string status = 5;
}

message UpdateRideStatusRequest {
  int64 ride_id = 1;
  string status = 2;
  int64 driver_id = 3;
}

message UpdateRideStatusResponse {
  string status = 1;
}
